# pitit_shell

./: .cas.tst.swp  .gitignore  .nfs000000000100861e000009b3  .nfs00000000010087a400001134  .nfs00000000010087a500001164  .nfs000000000100890700000048  .nfs000000000d7c001200000030  .nfs000000000d7c007100001138  .nfs000000000d7c0074000002ae  Makefile  Makefile.base  OUT  README copy.md  README.md  b  cas.tst  main.c  out  outbash  outfile  outfile3  outfile5  outmini  test.c  test.txt  tester  valgrind.txt
config/: headers.mk  headers_execution.mk  headers_parsing.mk  print.mk  sources copy.mk  sources.mk  sources_execution.mk  sources_parsing.mk
includes/: expands.h  minishell.h
incs/: defines copy.h  defines.h  defines_execution.h  enums.h  enums_execution.h  enums_parsing.h  minishell.h  prototypes copy.h  prototypes.h  prototypes_execution.h  structures copy.h  structures.h  structures_execution.h  structures_parsing.h
incs/execution_incs/: defines_execution.h  enums_execution.h  execution.c  minishell_execution.h  prototypes_execution.h  structures_execution.h
incs/parsing_incs/: defines_parsing.h  enums_parsing.h  minishell_parsing.h  (+2 more)
libft/: Makefile  ft_atoi.c  ft_atoi_on.c  ft_free.c  ft_get_env.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_join_str_arr_on.c  ft_lststr_to_str.c  ft_print_split.c  ft_putendl_fd.c  ft_str_arr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strjoin_paths.c  ft_strnstr.c  ft_strstr.c  ft_substr.c  ft_ustrdup.c  get_next_line.c  get_next_line_utils.c  libft.h  list_utils.c  lstc.c  lstc_2.c  per_n_set_errno.c  print_libft.mk  put_ert.c
mini/: CMakeLists.txt  Makefile  executions.c  instruction_block_chain.c  instruction_block_tree_utils.c  main.c  mini_parsing.h  outfile  simple_quoting.c  split_on_meta.c  split_toklst_on_meta.c  str_token_debug.c  str_token_utils.c  token_lst_utils.c
mini/libft/: Makefile  ft_atoi_on.c  ft_free_int_arr.c  ft_isdigit.c  ft_lststr_to_str.c  ft_print_split.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_strjoin.c  ft_substr.c  get_next_line.c  libft.h
new_libft/: Makefile  libft_headers.mk  libft_sources.mk  print_libft.mk
renamed_mini/: basic_enums.h  child_token.c  debug  double_quoting.c  escaping_chars.c  expand_variable.c  get_here_doc_fd.c  idee  init_pipe_arr_on.c  instruction_block_building_utils.c  instruction_block_tree_debug.c  main.c  mini_parsing.c  mini_parsing.h  per_n_set_errno.c  preserv.c  simple_tokens_utils.c  t_string_token_utils.c  test_mini.h  token_to_str_token.c  xtmemory.kcg
srcs/: basic_enums.h  brieuc.c  main.c  main_utils.c  prompt.c  testing.c
(+189 files in other folders)
