cmake_minimum_required(VERSION 3.24)
project(mini_parsing C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft)

add_executable(mini_parsing
        libft/close_pipe_arr.c
        libft/ft_atoi.c
        libft/ft_atoi_on.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_free_int_arr.c
        libft/ft_intarr_set.c
        libft/ft_is_overflowing.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_issign.c
        libft/ft_itoa.c
        libft/ft_lststr_to_str.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdup.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_print_split.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdup.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoin_three.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_swap.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_ustrdup.c
        libft/ft_ustrlen.c
        libft/get_next_line.c
        libft/int_arr_utils.c
        libft/is_from_charset.c
        libft/libft.h
        libft/list_utils.c
        libft/maths.c
        libft/per_n_ret.c
        libft/put_ert.c
        libft/str_is_made_of.c
        basic_enums.h
        child_token.c
        double_quoting.c
        escaping_chars.c
        expand_variable.c
        init_pipe_arr_on.c
        instruction_block_building_utils.c
        instruction_block_chain.c
        instruction_block_tree_debug.c
        instruction_block_tree_utils.c
        main.c
        mini_parsing.c
        mini_parsing.h
        per_n_set_errno.c
        preserv.c
        simple_quoting.c
        simple_tokens_utils.c
        split_on_meta.c
        split_toklst_on_meta.c
        str_token_debug.c
        str_token_utils.c
        suppress_quotes.c
        t_string_token_utils.c
        test_mini.h
        testing_utils.c
        token_lst_utils.c
        token_to_str_token.c)
